--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -12,18 +12,7 @@
           "/manifest.webmanifest",
           "/*.css",
           "/*.js",
-          "/assets/img/**"
-        ]
-      }
-    },
-    {
-      "name": "assets",
-      "installMode": "lazy",
-      "updateMode": "prefetch",
-      "resources": {
-        "files": [
-          "/assets/**",
-          "/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"
+          "/assets/**"
         ]
       }
     }
