partial design of assets loader

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,11 @@
             ],
             "scripts": [
               "src/assets/cubism/Core/minified.js",
-              "src/assets/cubism/Core/live2dcubismcore.js"
+              "src/assets/cubism/Core/live2dcubismcore.js",
+              "src/assets/vendor/PxLoader/PxLoader.js",
+              "src/assets/vendor/PxLoader/PxLoaderImage.js",
+              "src/assets/vendor/PxLoader/PxLoaderSound.js",
+              "src/assets/vendor/PxLoader/PxLoaderVideo.js"
             ],
             "serviceWorker": true,
             "ngswConfigPath": "ngsw-config.json"
